bootstrap/bases/argocd/argocd-repo-server.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
        - name: gcp-creds
          secret:
            secretName: argocd-sa-creds
            items:
              - key: cred
                path: application_default_credentials.json
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: gcp-creds
              mountPath: /etc/google/
