bootstrap/bases/argocd/argocd-server-svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"http":"argocd-backend-config"}}'
