bootstrap/bases/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: argocd-frontend-config
    external-dns.alpha.kubernetes.io/hostname: argocd.digitalview.com.br
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - secretName: argocd-tls
      hosts:
        - argocd.digitalview.com.br
  rules:
    - host: argocd.digitalview.com.br
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/*"   # "*" is needed. Without this, the UI Javascript and CSS will not load properly
          backend:
            service:
              name: argocd-server
              port:
                number: 80
